
The list interface is complete (for now) as is its first
implementation:  the linked_list class.  Unit tests are also in.
----------------------------------------------------------------------
Thu Apr 11 18:15:11 2002                        Michael Jennings (mej)

Fix "make distcheck"
----------------------------------------------------------------------
Thu Apr 11 23:47:26 2002                        Michael Jennings (mej)

Not needed...
----------------------------------------------------------------------
Mon Apr 15 23:50:40 2002                        Michael Jennings (mej)

A doubly-linked list implementation of the list interface.
----------------------------------------------------------------------
Tue Apr 16 16:23:42 2002                        Michael Jennings (mej)

Another obvious list implementation...an array.
----------------------------------------------------------------------
Fri Apr 19 18:35:21 2002                        Michael Jennings (mej)

Working tokenizer.  The question is, how much do I need to add in the
way of flexibility....  Shell-style parsing?  Null-field support?
*ponders*
----------------------------------------------------------------------
Fri Apr 26 15:13:27 2002                        Michael Jennings (mej)

Working on some new stuff here, and just wanted to get this stuff in
in case my laptop croaks or something.  The new code doesn't work,
but at least it doesn't break the compile. :)
----------------------------------------------------------------------
Fri Apr 26 15:24:02 2002                        Michael Jennings (mej)

I spoke too soon....
----------------------------------------------------------------------
Mon Apr 29 15:25:01 2002                        Michael Jennings (mej)

The options parser seems to be working now.  It's fairly extensible
and fixes a lot of the problems with the old one.  It was rewritten
more or less from scratch.
----------------------------------------------------------------------